// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 666,
    "width": 422,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          215,
          422,
        ],
        [
          211,
          432,
        ],
        [
          208,
          422,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            215,
            350,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          211,
          257,
        ],
        [
          211,
          307,
        ],
        [
          211,
          370,
        ],
        [
          211,
          422,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 666,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            16,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "links": null,
      "navigateTo": "cloudView",
      "outEdges": [],
      "parent": null,
      "position": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 286,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            16,
          ],
          "text": "AMAZON",
          "width": 58,
        },
      ],
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        11,
        369,
      ],
      "shape": "rectangle",
      "size": {
        "height": 286,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            125,
            96,
          ],
          "text": "Backend",
          "width": 73,
        },
      ],
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        50,
        77,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            150,
            83,
          ],
          "text": "S3",
          "width": 23,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            94,
            110,
          ],
          "text": "S3 is a storage service",
          "width": 135,
        },
      ],
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        50,
        435,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "S3",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 422,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 1722,
    "width": 832,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          420,
          1141,
        ],
        [
          416,
          1151,
        ],
        [
          413,
          1141,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labels": [],
      "parent": "cloud.backend",
      "points": [
        [
          416,
          951,
        ],
        [
          416,
          1008,
        ],
        [
          416,
          1082,
        ],
        [
          416,
          1142,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          293,
          759,
        ],
        [
          298,
          768,
        ],
        [
          288,
          764,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            242,
            664,
          ],
          "text": "fetches data in zero trust network with sso",
          "width": 249,
        },
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            242,
            680,
          ],
          "text": "authentification",
          "width": 90,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          209,
          565,
        ],
        [
          211,
          605,
        ],
        [
          219,
          651,
        ],
        [
          238,
          688,
        ],
        [
          251,
          715,
        ],
        [
          270,
          740,
        ],
        [
          291,
          762,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          476,
          761,
        ],
        [
          468,
          768,
        ],
        [
          469,
          758,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            532,
            672,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          576,
          566,
        ],
        [
          556,
          604,
        ],
        [
          533,
          648,
        ],
        [
          511,
          688,
        ],
        [
          499,
          712,
        ],
        [
          485,
          736,
        ],
        [
          472,
          760,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          420,
          1528,
        ],
        [
          416,
          1538,
        ],
        [
          413,
          1528,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            420,
            1443,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          416,
          1338,
        ],
        [
          416,
          1395,
        ],
        [
          416,
          1469,
        ],
        [
          416,
          1528,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          215,
          372,
        ],
        [
          211,
          382,
        ],
        [
          208,
          372,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            215,
            287,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          211,
          180,
        ],
        [
          211,
          237,
        ],
        [
          211,
          312,
        ],
        [
          211,
          372,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          625,
          372,
        ],
        [
          622,
          382,
        ],
        [
          618,
          372,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            626,
            287,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          622,
          180,
        ],
        [
          622,
          237,
        ],
        [
          622,
          312,
        ],
        [
          622,
          372,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
  ],
  "height": 1722,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "links": null,
      "navigateTo": "cloudView",
      "outEdges": [],
      "parent": null,
      "position": [
        11,
        320,
      ],
      "shape": "rectangle",
      "size": {
        "height": 1096,
        "width": 811,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            16,
          ],
          "text": "BACKEND",
          "width": 65,
        },
      ],
      "links": null,
      "outEdges": [],
      "parent": "cloud",
      "position": [
        216,
        705,
      ],
      "shape": "rectangle",
      "size": {
        "height": 671,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            89,
            75,
          ],
          "text": "Support Engineer",
          "width": 146,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            50,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            97,
            118,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        50,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            122,
            96,
          ],
          "text": "customer",
          "width": 77,
        },
      ],
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        461,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            71,
            75,
          ],
          "text": "Admin Panel Webapp",
          "width": 181,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            41,
            102,
          ],
          "text": "The admin panel is a webapp that allows",
          "width": 241,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            45,
            118,
          ],
          "text": "support staff to manage customer data.",
          "width": 232,
        },
      ],
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        50,
        386,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            35,
            75,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 253,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            36,
            102,
          ],
          "text": "The customer dashboard is a webapp that",
          "width": 250,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            56,
            118,
          ],
          "text": "allows customers to view their data.",
          "width": 211,
        },
      ],
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        461,
        386,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            111,
            75,
          ],
          "text": "Graphql API",
          "width": 102,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            43,
            102,
          ],
          "text": "Component that allows to query data via",
          "width": 238,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            132,
            118,
          ],
          "text": "GraphQL.",
          "width": 59,
        },
      ],
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        255,
        771,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            90,
            75,
          ],
          "text": "Backend Storage",
          "width": 144,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            39,
            102,
          ],
          "text": "The backend storage is a component that",
          "width": 246,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            127,
            118,
          ],
          "text": "stores data.",
          "width": 70,
        },
      ],
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        255,
        1156,
      ],
      "shape": "storage",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            127,
            83,
          ],
          "text": "Amazon",
          "width": 69,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            81,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "links": null,
      "navigateTo": "amazon",
      "outEdges": [],
      "parent": null,
      "position": [
        255,
        1542,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 832,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 1254,
    "width": 731,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          369,
          702,
        ],
        [
          366,
          712,
        ],
        [
          362,
          702,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            370,
            631,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          366,
          538,
        ],
        [
          366,
          588,
        ],
        [
          366,
          651,
        ],
        [
          366,
          703,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          369,
          1060,
        ],
        [
          366,
          1070,
        ],
        [
          362,
          1060,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            370,
            989,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          366,
          896,
        ],
        [
          366,
          946,
        ],
        [
          366,
          1009,
        ],
        [
          366,
          1061,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          311,
          345,
        ],
        [
          313,
          355,
        ],
        [
          305,
          348,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            274,
            273,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          212,
          180,
        ],
        [
          241,
          231,
        ],
        [
          278,
          294,
        ],
        [
          308,
          347,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          427,
          348,
        ],
        [
          419,
          355,
        ],
        [
          421,
          345,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            479,
            273,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          520,
          180,
        ],
        [
          491,
          231,
        ],
        [
          454,
          294,
        ],
        [
          424,
          347,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
  ],
  "height": 1254,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            10,
            16,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "links": null,
      "navigateTo": "cloud3levels",
      "outEdges": [],
      "parent": null,
      "position": [
        166,
        292,
      ],
      "shape": "rectangle",
      "size": {
        "height": 644,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            89,
            75,
          ],
          "text": "Support Engineer",
          "width": 146,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            50,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            98,
            118,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        -1,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            123,
            96,
          ],
          "text": "customer",
          "width": 77,
        },
      ],
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        410,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            123,
            96,
          ],
          "text": "Frontend",
          "width": 75,
        },
      ],
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        205,
        358,
      ],
      "shape": "browser",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            125,
            96,
          ],
          "text": "Backend",
          "width": 73,
        },
      ],
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        205,
        716,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            127,
            83,
          ],
          "text": "Amazon",
          "width": 69,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            80,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "links": null,
      "navigateTo": "amazon",
      "outEdges": [],
      "parent": null,
      "position": [
        205,
        1074,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 731,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 770,
    "width": 731,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          369,
          576,
        ],
        [
          366,
          586,
        ],
        [
          362,
          576,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            370,
            536,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          366,
          475,
        ],
        [
          366,
          507,
        ],
        [
          366,
          543,
        ],
        [
          366,
          576,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          298,
          282,
        ],
        [
          301,
          292,
        ],
        [
          293,
          286,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            274,
            242,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          223,
          180,
        ],
        [
          246,
          213,
        ],
        [
          272,
          250,
        ],
        [
          296,
          284,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          439,
          286,
        ],
        [
          430,
          292,
        ],
        [
          433,
          282,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "color": "#d4d4d4",
          "fontSize": 14,
          "pt": [
            478,
            242,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          509,
          180,
        ],
        [
          486,
          213,
        ],
        [
          460,
          250,
        ],
        [
          436,
          284,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
  ],
  "height": 770,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            89,
            75,
          ],
          "text": "Support Engineer",
          "width": 146,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            50,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            98,
            118,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        -1,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            123,
            96,
          ],
          "text": "customer",
          "width": 77,
        },
      ],
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        410,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            139,
            96,
          ],
          "text": "cloud",
          "width": 45,
        },
      ],
      "links": null,
      "navigateTo": "cloudView",
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        205,
        295,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            127,
            83,
          ],
          "text": "Amazon",
          "width": 69,
        },
        {
          "align": "left",
          "color": "#dbeafe",
          "fontSize": 14,
          "pt": [
            80,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "links": null,
      "navigateTo": "amazon",
      "outEdges": [],
      "parent": null,
      "position": [
        205,
        590,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "width": 731,
}
`;
